localization files (en|ru|uz)

--- a/site/src/app/branches/branches.component.html
+++ b/site/src/app/branches/branches.component.html
@@ -2,7 +2,7 @@
 
   <div class="container">
     <div class="section-title text-center">
-      <h2>Наши филиалы</h2>
+      <h2>{{"common.branches"|translate}}</h2>
       <p class="separator"></p>
     </div>
   </div>
