--- a/site/src/app/layout/footer/footer.component.html
+++ b/site/src/app/layout/footer/footer.component.html
@@ -11,7 +11,7 @@
 
             <ul class="list-unstyled">
               <li>
-                <a href="javascript:void(0)">Подписывайтесь на нас: <br>
+                <a href="javascript:void(0)">{{"footer.followUs"|translate}}: <br>
                   <div class="social-links">
                     <a href="https://www.facebook.com/Alskom-VITA-103456081033455/" target="_blank" class="facebook"><i
                       class="fa fa-facebook"></i></a>
@@ -29,7 +29,7 @@
       <div class="col-sm-6 col-md-3 col-lg-2">
         <div class="list-menu">
 
-          <h4><i class="fa fa-phone"></i>Телефон</h4>
+          <h4><i class="fa fa-phone"></i>{{"common.phone"|translate}}</h4>
 
           <ul class="list-unstyled">
             <li>
@@ -48,7 +48,7 @@
       <div class="col-sm-6 col-md-3 col-lg-2">
         <div class="list-menu">
 
-          <h4><i class="fa fa-envelope"></i> E-mail</h4>
+          <h4><i class="fa fa-envelope"></i>E-mail</h4>
 
           <ul class="list-unstyled">
             <li><a href="javascript:void(0)">alskomvita@gmail.com </a></li>
@@ -60,11 +60,11 @@
       <div class="col-sm-6 col-md-3 col-lg-2">
         <div class="list-menu">
 
-          <h4><i class="fa fa-map-marker"></i>Address</h4>
+          <h4><i class="fa fa-map-marker"></i>{{"common.address"|translate}}</h4>
 
           <ul class="list-unstyled">
             <li>
-              <a href="javascript:void(0)">100202 г.Ташкент <br> ул.Амира Темура 109</a>
+              <a href="javascript:void(0)" [innerHTML]="'footer.addressLine'|translate"></a>
             </li>
           </ul>
 
@@ -83,8 +83,8 @@
           <ul class="list-unstyled">
             <li>
               <p>
-              Разработка сайта <br>
-              <a href="http://Axios.ltd" target="_blank">Axios Solutions LLC </a>
+                {{"footer.developBy"|translate}} <br>
+                <a href="http://Axios.ltd" target="_blank">Axios Solutions LLC </a>
               </p>
             </li>
           </ul>
