--- a/site/src/app/leaderships/leaderships.component.html
+++ b/site/src/app/leaderships/leaderships.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="section-title text-center">
 
-      <h2>Руководство</h2>
+      <h2>{{'common.leaderships'|translate}}</h2>
       <p class="separator"></p>
 
     </div>
