--- a/site/src/app/news/news.component.html
+++ b/site/src/app/news/news.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="section-title text-center">
 
-      <h2>Новости</h2>
+      <h2>{{"common.news"|translate}}</h2>
       <p class="separator"></p>
 
     </div>
@@ -22,7 +22,7 @@
               <a href="#">{{item.title}}</a>
             </h4>
             <span>{{item.date|date:'shortDate'}}</span>
-            <a class="pull-right readmore" href="#">Подробнее</a>
+            <a class="pull-right readmore" href="#">{{"common.readMore"|translate}}</a>
           </div>
         </div>
       </div>
