--- a/site/src/app/products/products.component.html
+++ b/site/src/app/products/products.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="section-title text-center">
 
-      <h2>Продукты</h2>
+      <h2>{{"common.products"|translate}}</h2>
       <p class="separator"></p>
 
     </div>
@@ -20,7 +20,7 @@
             </h2>
             <h4>{{item.name}}</h4>
             <div class="table_btn">
-              <a href="javascript:void(0)" class="btn"> Подробнее</a>
+              <a href="javascript:void(0)" class="btn"> {{"common.readMore"|translate}}</a>
             </div>
           </div>
         </div>
