--- a/site/src/app/vacancies/vacancies.component.html
+++ b/site/src/app/vacancies/vacancies.component.html
@@ -2,7 +2,7 @@
 
   <div class="container">
     <div class="section-title text-center">
-      <h2>Вакансии</h2>
+      <h2>{{"common.vacancies"|translate}}</h2>
       <p class="separator"></p>
     </div>
   </div>
