--- a/site/src/app/about/about.component.html
+++ b/site/src/app/about/about.component.html
@@ -3,13 +3,9 @@
   <div class="container">
     <div class="section-title text-center">
 
-      <h2>О компании </h2>
+      <h2>{{"common.about"|translate}} </h2>
       <p class="separator">
-        ответственностью Страховая Компания «ALSKOM-VITA» (далее – «Компания»)
-        создана решением Наблюдательного совета Акционерного общества Страховой Компании «ALSKOM» от 4
-        апреля 2019 года, учитывая перспективы развития отрасли страхования жизни в Республике Узбекистан, с
-        целью оказания комплексных услуг по накопительному страхованию жизни, добровольному медицинскому
-        страхованию, страхованию выезжающих за рубеж, страхование от различных заболеваний.
+        {{"about.headline"|translate}}
       </p>
 
     </div>
@@ -19,7 +15,7 @@
     <div class="section-title">
 
       <h3>
-        Целью Компании является
+        {{"about.listTitle"|translate}}
       </h3>
 
     </div>
@@ -30,9 +26,9 @@
         <div class="feature-block">
 
           <img src="assets/img/svg/vector.svg" alt="img" class="img-fluid">
-          <h4>Обеспечение надежных</h4>
+          <h4></h4>
           <p>
-            страховых гарантий потребителям страховых услуг;
+            {{"about.listItem1"|translate}}
           </p>
         </div>
       </div>
@@ -41,11 +37,9 @@
         <div class="feature-block">
 
           <img src="assets/img/svg/cloud.svg" alt="img" class="img-fluid">
-          <h4>Внедрение новых</h4>
+          <h4></h4>
           <p>
-            финансовых инструментариев, способствующие удовлетворению потребности
-            трудоустроенных слоев населения в накоплении денежных средств в длительной перспективе и
-            страховой защите их жизни и здоровья;
+            {{"about.listItem2"|translate}}
           </p>
 
         </div>
@@ -55,11 +49,9 @@
         <div class="feature-block">
 
           <img src="assets/img/svg/tools.svg" alt="img" class="img-fluid">
-          <h4>Удовлетворение прогнозируемого</h4>
+          <h4></h4>
           <p>
-            роста потребности населения в страховых услугах (накопительные виды страхования жизни,
-            добровольное медицинское страхование, страхование жизни и здоровья от несчастных случаев и
-            др.);
+            {{"about.listItem3"|translate}}
           </p>
 
         </div>
@@ -69,15 +61,19 @@
         <div class="feature-block">
 
           <img src="assets/img/svg/planet.svg" alt="img" class="img-fluid">
-          <h4>Внедрение в практику</h4>
+          <h4></h4>
           <p>
-            международных стандартов страхования жизни и здоровья.
+            {{"about.listItem4"|translate}}
           </p>
 
         </div>
       </div>
 
     </div>
+
+    <p class="separator text-left" [innerHTML]="'about.footer'|translate">
+    </p>
+
   </div>
 
 </section>
