--- a/site/src/app/layout/header/header.component.html
+++ b/site/src/app/layout/header/header.component.html
@@ -3,48 +3,48 @@
 
     <div id="logo" class="pull-left">
       <a routerLink="/home">
-        <img src="assets/img/logo.png" height="40" alt="" title=""/>
+        <img src="assets/img/logo.png" alt="img"/>
       </a>
     </div>
 
     <nav id="nav-menu-container">
       <ul class="nav-menu">
         <li routerLinkActive="menu-active">
-          <a routerLink="/home">Главная</a>
+          <a routerLink="/home">{{"common.home"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active" class="menu-has-children">
-          <a href="javascript:void(0)">Компания</a>
+          <a href="javascript:void(0)">{{"common.company"|translate}}</a>
           <ul>
             <li>
               <a routerLink="/about">
-                О нас
+                {{"common.about"|translate}}
               </a>
             </li>
             <li>
               <a routerLink="/leaderships">
-                Руководство
+                {{"common.leaderships"|translate}}
               </a>
             </li>
             <li>
               <a routerLink="/branches">
-                Наши филиалы
+                {{"common.branches"|translate}}
               </a>
             </li>
             <li>
               <a routerLink="/vacancies">
-                Вакансии
+                {{"common.vacancies"|translate}}
               </a>
             </li>
           </ul>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/products">Продукты</a>
+          <a routerLink="/products">{{"common.products"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/news">Новости</a>
+          <a routerLink="/news">{{"common.news"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/contact">Контакты</a>
+          <a routerLink="/contact">{{"common.contact"|translate}}</a>
         </li>
         <li class="menu-has-children">
           <a href="javascript:void(0)">
