responsibility mobile device

--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -2,15 +2,25 @@
   <div class="hero-container">
     <h1 [innerHTML]="'home.heroTitle'|translate">
     </h1>
-    <Br>
     <h2 [innerHTML]="'home.heroContent'|translate">
-
     </h2>
-    <a routerLink="/about" class="btn-get-started scrollto"> {{"home.insuranceOffer"|translate}} </a>
+    <a href="javascript:void (0)" data-target="#get-started"
+       class="btn-get-started scrollto"> {{"home.insuranceOffer"|translate}} </a>
     <div class="btns">
-      <a routerLink="/products"><i class="fa fa-list fa-3x"></i> {{"common.products"|translate}}</a>
-      <a routerLink="/vacancies"><i class="fa fa-bookmark fa-3x"></i> {{"common.vacancies"|translate}}</a>
-      <a routerLink="/contact"><i class="fa fa-phone fa-3x"></i> {{"common.contact"|translate}}</a>
+      <a href="javascript:void (0)" data-target="#pricing"><i
+        class="fa fa-list fa-3x"></i> {{"common.products"|translate}}</a>
+      <a href="javascript:void (0)" data-target="#testimonials"><i
+        class="fa fa-bookmark fa-3x"></i> {{"common.vacancies"|translate}}</a>
+      <a href="javascript:void (0)" data-target="#contact"><i
+        class="fa fa-phone fa-3x"></i> {{"common.contact"|translate}}</a>
     </div>
   </div>
 </section>
+
+<app-about></app-about>
+<app-branches></app-branches>
+<app-leaderships></app-leaderships>
+<app-vacancies></app-vacancies>
+<app-products></app-products>
+<app-news></app-news>
+<app-contact></app-contact>
