--- a/site/src/assets/css/site.scss
+++ b/site/src/assets/css/site.scss
@@ -23,3 +23,16 @@
   border-radius: 0 !important;
   -webkit-box-shadow: 0 0 5px #ececec inset;
 }
+
+/*
+buttons
+*/
+
+.btn {
+  background: #f18217;
+  color: white;
+}
+
+.btn:hover {
+  background: #673ab7;
+}
