--- a/site/src/app/layout/header/header.component.html
+++ b/site/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div id="logo" class="pull-left">
-      <a routerLink="/home">
+      <a routerLink="/">
         <img src="assets/img/logo.png" alt="img"/>
       </a>
     </div>
@@ -10,41 +10,41 @@
     <nav id="nav-menu-container">
       <ul class="nav-menu">
         <li routerLinkActive="menu-active">
-          <a routerLink="/home">{{"common.home"|translate}}</a>
+          <a href="javascript:void (0)" data-target="#hero">{{"common.home"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active" class="menu-has-children">
           <a href="javascript:void(0)">{{"common.company"|translate}}</a>
           <ul>
             <li>
-              <a routerLink="/about">
+              <a href="javascript:void (0)" data-target="#get-started">
                 {{"common.about"|translate}}
               </a>
             </li>
             <li>
-              <a routerLink="/leaderships">
+              <a href="javascript:void (0)" data-target="#team">
                 {{"common.leaderships"|translate}}
               </a>
             </li>
             <li>
-              <a routerLink="/branches">
+              <a href="javascript:void (0)" data-target="#screenshots">
                 {{"common.branches"|translate}}
               </a>
             </li>
             <li>
-              <a routerLink="/vacancies">
+              <a href="javascript:void (0)" data-target="#testimonials">
                 {{"common.vacancies"|translate}}
               </a>
             </li>
           </ul>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/products">{{"common.products"|translate}}</a>
+          <a href="javascript:void (0)" data-target="#pricing">{{"common.products"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/news">{{"common.news"|translate}}</a>
+          <a href="javascript:void (0)" data-target="#blog">{{"common.news"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
-          <a routerLink="/contact">{{"common.contact"|translate}}</a>
+          <a href="javascript:void (0)" data-target="#contact">{{"common.contact"|translate}}</a>
         </li>
         <li class="menu-has-children">
           <a href="javascript:void(0)">
@@ -52,7 +52,7 @@
           </a>
           <ul>
             <li *ngFor="let item of langList">
-              <a href="javascript:void(0)" (click)="changeLang(item.value)">
+              <a href="javascript:void(0)" [attr.data-lang]="item.value" (click)="changeLang(item.value)">
                 <img src="assets/img/flags/{{item.value}}.png"/>
                 {{item.text}}
               </a>
