--- a/site/src/app/news/news.component.html
+++ b/site/src/app/news/news.component.html
@@ -14,15 +14,15 @@
 
       <div class="col-md-6 col-lg-4" *ngFor="let item of items">
         <div class="block-blog text-left">
-          <a href="javascript:void(0)"  (click)="openModal(item,template)">
+          <a href="javascript:void(0)" (click)="openModal(item,template)">
             <img [src]="baseUrl+item.image" alt="img">
           </a>
           <div class="content-blog">
-            <h4>
-              <a href="javascript:void(0)"  (click)="openModal(item,template)">{{item.title}}</a>
+            <h4> {{item.title}}
             </h4>
             <span>{{item.date|date:'shortDate'}}</span>
-            <a class="pull-right readmore" href="javascript:void(0)"  (click)="openModal(item,template)">{{"common.readMore"|translate}}</a>
+            <a class="pull-right readmore" href="javascript:void(0)"
+               (click)="openModal(item,template)">{{"common.readMore"|translate}}</a>
           </div>
         </div>
       </div>
@@ -38,20 +38,20 @@
     <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div> 
+  </div>
 
-    <div class="modal-body">
+  <div class="modal-body">
 
-      <div [innerHtml]="item.description" *ngIf="item"></div>
+    <div [innerHtml]="item.description" *ngIf="item"></div>
 
-    </div>
+  </div>
 
-    <div class="modal-footer">
- 
-      <button type="button" class="btn btn-secondary" (click)="closeModal()">
-        {{"common.close"|translate}}
-      </button> 
+  <div class="modal-footer">
 
-    </div>
- 
+    <button type="button" class="btn btn-secondary" (click)="closeModal()">
+      {{"common.close"|translate}}
+    </button>
+
+  </div>
+
 </ng-template>
