--- a/site/src/assets/css/style.scss
+++ b/site/src/assets/css/style.scss
@@ -189,10 +189,8 @@ span {
 #hero {
   width: 100%;
   height: calc(100vh - 40px);
-  background-image: url(../img/main34.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background: url(../img/main34.png) center center no-repeat;
+  background-size: 100%;
   position: relative;
   margin-top: 40px;
 }
@@ -215,6 +213,12 @@ span {
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  #hero .hero-container {
+    left: 0px;
+  }
+}
+
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 48px;
@@ -226,8 +230,10 @@ span {
 
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
+    font-size: 25px;
+    line-height: 25px;
+    position: absolute;
+    top: 150px;
   }
 }
 
@@ -244,6 +250,8 @@ span {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
+    position: absolute;
+    top: 300px;
   }
 }
 
@@ -269,14 +277,20 @@ span {
   text-decoration: none;
 }
 
+@media (max-width: 768px) {
+  #hero .btn-get-started {
+    margin-top: 400px;
+  }
+}
+
 #hero .btn-get-started:hover {
-  background: #3a3c82;
-  border: 2px solid #3a3c82;
+  background: #673ab7;
+  border: 2px solid #673ab7;
   color: #fff;
 }
 
 #hero .btns a {
-  color: #673ab7;
+  color: #555;
   font-size: 11px;
   font-weight: 600;
   text-transform: uppercase;
@@ -292,7 +306,7 @@ span {
 }
 
 #hero .btns a:hover {
-  color: #f18217;
+  color: #673ab7;
 }
 
 /*--------------------------------------------------------------
@@ -381,14 +395,6 @@ span {
   transition: 0.3s;
 }
 
-.nav-menu li.menu-has-children li a {
-  color: #3a3c82;
-}
-
-.nav-menu li.menu-has-children li:hover > a {
-  color: #f18217;
-}
-
 .nav-menu li:hover > a, .nav-menu > .menu-active > a {
   color: #f18217;
 }
@@ -418,7 +424,7 @@ span {
 }
 
 .nav-menu ul li:hover > a {
-  color: #71c55d;
+  color: #f18217;
 }
 
 .nav-menu ul ul {
@@ -507,11 +513,11 @@ span {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #71c55d;
+  color: #f18217;
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #71c55d;
+  color: #f18217;
 }
 
 #mobile-body-overly {
@@ -590,7 +596,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 #get-started {
   display: inline-block;
   height: 100%;
-  width: 100%; 
+  width: 100%;
 }
 
 #get-started .feature-block {
@@ -695,11 +701,6 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Screenshots Section
 --------------------------------*/
-#screenshots {
-  height: calc(100vh - 40px);
-  margin-bottom: 60px;
-}
-
 .owl-dot.active > span {
   height: 10px !important;
   width: 10px !important;
@@ -712,8 +713,6 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 .owl-item img {
   cursor: pointer;
-  width: 600px;
-  height: 400px;
 }
 
 .owl-stage-outer {
@@ -887,12 +886,21 @@ body.mobile-nav-active #mobile-nav-toggle i {
   bottom: 0;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.19);
   //bottom: -147px;
-  bottom: -162px;
+  bottom: -165px;
   padding: 20px 0;
   position: absolute;
   width: 100%;
   transition: all 0.5s ease-in-out 0s;
 }
+
+#team a {
+  color: #f18217;
+}
+
+#team a:hover {
+  color: #673ab7;
+}
+
 
 #team .team-block .team-content ul {
   display: block;
@@ -915,15 +923,6 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }
 
 #team .team-block .team-content ul li a .fa:hover {
-  color: #673ab7;
-}
-
-
-#team  a {
-  color: #f18217;
-}
-
-#team  a:hover {
   color: #673ab7;
 }
 
@@ -1125,7 +1124,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }
 
 #blog .block-blog .content-blog a.readmore {
-  color: #673ab7;
+  color: #f18217;
   font-size: 12px;
   font-weight: 600;
   text-decoration: none;
@@ -1135,7 +1134,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }
 
 #blog .block-blog .content-blog a.readmore:hover {
-  color: #f18217;
+  color: #673ab7;
 }
 
 /* Newsletter Section
@@ -1207,7 +1206,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }
 
 #newsletter ul li {
-  background: #71c55d;
+  background: #f18217;
   border-radius: 50px;
   float: left;
   height: 35px;
@@ -1219,7 +1218,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }
 
 #newsletter ul li:hover {
-  background: #55b03f;
+  background: #673ab7;
 }
 
 #newsletter ul li .fa {
@@ -1260,7 +1259,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 #contact .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #673ab7;
+  background: #f18217;
   color: #fff;
   line-height: 1;
   padding: 6px 0 8px 0;
@@ -1334,7 +1333,6 @@ body.mobile-nav-active #mobile-nav-toggle i {
 .footer {
   background: #2a2c30;
   padding-top: 50px;
-  font-size: 18px;
 }
 
 .footer .footer-logo .navbar-brand {
@@ -1342,6 +1340,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   display: inline-block;
   float: none;
   font-family: "Philosopher", sans-serif;
+  font-size: 24px;
   font-weight: 500;
   height: 100%;
   letter-spacing: 0.2em;
