--- a/site/src/app/products/products.component.html
+++ b/site/src/app/products/products.component.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-6 col-lg-3" *ngFor="let item of items">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3" *ngFor="let item of items">
         <div class="block-pricing">
           <div class="table">
             <h2>
@@ -20,7 +20,7 @@
                 <img [src]="baseUrl+item.image"  class="img-thumbnail"  alt="img">
               </a>
             </h2>
-            <h4>{{item.name}}</h4>
+            <h4 [innerHTML]="getTitle(item.name)"></h4>
             <div class="table_btn">
               <a href="javascript:void(0)" class="btn" (click)="openModal(item,template)"> {{"common.readMore"|translate}}</a>
             </div>
