fixed font home page

--- a/site/src/assets/css/style.scss
+++ b/site/src/assets/css/style.scss
@@ -187,7 +187,7 @@ span {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%; 
+  width: 100%;
   background: url(../img/main34.png) center center no-repeat;
   background-size: cover;
   margin-top: 40px;
@@ -216,13 +216,13 @@ span {
   font-family: "Philosopher", sans-serif;
   color: #f18217;
 }
- 
+
 #hero h2 {
   color: #777;
   margin-bottom: 30px;
-  font-size: 24px; 
+  font-size: 24px;
   line-height: 36px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Philosopher", sans-serif;
   font-weight: 300;
 }
 
@@ -263,7 +263,7 @@ span {
   text-decoration: none;
   transition: 0.3s;
 }
- 
+
 #hero .btns a:hover {
   color: #673ab7;
 }
