--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -2,8 +2,8 @@
  <div class="row">
     <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-6">
     </div>
-   <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-6 align-middle">
-      <div class="hero-container">  
+   <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-6">
+      <div class="hero-container">
           <h1 [innerHTML]="'home.heroTitle'|translate">
           </h1>
           <h2 [innerHTML]="'home.heroContent'|translate">
