pertners api & admin

--- a/site/src/app/home2/home2.component.html
+++ b/site/src/app/home2/home2.component.html
@@ -31,4 +31,5 @@
 <app-vacancies></app-vacancies>
 <app-products></app-products>
 <app-news></app-news>
+<app-partners></app-partners>
 <app-contact></app-contact>
