--- a/site/src/app/layout/header/header.component.html
+++ b/site/src/app/layout/header/header.component.html
@@ -44,6 +44,9 @@
           <a href="javascript:void (0)" data-target="#blog">{{"common.news"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
+          <a href="javascript:void (0)" data-target="#partners">{{"common.partners"|translate}}</a>
+        </li>
+        <li routerLinkActive="menu-active">
           <a href="javascript:void (0)" data-target="#contact">{{"common.contact"|translate}}</a>
         </li>
         <li class="menu-has-children">
