async langs/lang

--- a/site/src/app/home2/home2.component.html
+++ b/site/src/app/home2/home2.component.html
@@ -6,7 +6,7 @@
         </h1>
         <h2 [innerHTML]="'home.heroContent'|translate">
         </h2>
-        <a href="javascript:void (0)" data-target="#get-started"
+        <a href="javascript:void (0)" data-target="#contact"
            class="btn-get-started scrollto"> {{"home.insuranceOffer"|translate}} </a>
         <div class="btns">
           <a href="javascript:void (0)" data-target="#pricing"><i
