--- a/site/src/app/leaderships/leaderships.component.html
+++ b/site/src/app/leaderships/leaderships.component.html
@@ -37,11 +37,11 @@
 <ng-template #template>
 
   <div class="modal-header">
-    <h4 class="modal-title pull-left">{{"common.experience"|translate}}</h4>
+    <h4 class="modal-title pull-left">{{"common.readMore"|translate}}</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div> 
+  </div>
 
     <div class="modal-body">
 
@@ -50,11 +50,11 @@
     </div>
 
     <div class="modal-footer">
- 
+
       <button type="button" class="btn btn-secondary" (click)="closeModal()">
         {{"common.close"|translate}}
-      </button> 
+      </button>
 
     </div>
- 
+
 </ng-template>
