--- a/site/src/assets/css/site.scss
+++ b/site/src/assets/css/site.scss
@@ -36,3 +36,12 @@ buttons
 .btn:hover {
   background: #673ab7;
 }
+
+.btn-primary{
+  background: #673ab7;
+  color: white;
+}
+
+.btn-primary:hover{
+  background: #f18217;
+}
