--- a/site/src/assets/css/style.scss
+++ b/site/src/assets/css/style.scss
@@ -537,6 +537,15 @@ body.mobile-nav-active #mobile-nav-toggle i {
   text-transform: capitalize;
 }
 
+.section-title h3{
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+}
+
 .section-title .separator {
   margin: 0;
 }
@@ -788,7 +797,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 #testimonials .top-top > h2 {
   font-family: "Roboto" sans-serif;
-  font-size: 45px;
+  font-size: 30px;
   font-weight: 100;
   letter-spacing: 2px;
   margin-bottom: 20px;
