--- a/site/src/app/layout/header/header.component.html
+++ b/site/src/app/layout/header/header.component.html
@@ -1,16 +1,14 @@
 <header id="header" class="header header-hide">
   <div class="container">
-
     <div id="logo" class="pull-left">
-      <a routerLink="/">
-        <img src="assets/img/logo.png" alt="img"/>
+      <a href="javascript:void (0)" data-target="#hero">
+        <img src="assets/img/logo.png" alt="img" />
       </a>
     </div>
-
     <nav id="nav-menu-container">
       <ul class="nav-menu">
         <li routerLinkActive="menu-active">
-          <a href="javascript:void (0)" data-target="#hero">{{"common.home"|translate}}</a>
+          <a href="javascript:void (0)" data-target="#pricing">{{"common.products"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active" class="menu-has-children">
           <a href="javascript:void(0)">{{"common.company"|translate}}</a>
@@ -26,19 +24,11 @@
               </a>
             </li>
             <li>
-              <a href="javascript:void (0)" data-target="#screenshots">
-                {{"common.branches"|translate}}
-              </a>
-            </li>
-            <li>
               <a href="javascript:void (0)" data-target="#testimonials">
                 {{"common.vacancies"|translate}}
               </a>
             </li>
           </ul>
-        </li>
-        <li routerLinkActive="menu-active">
-          <a href="javascript:void (0)" data-target="#pricing">{{"common.products"|translate}}</a>
         </li>
         <li routerLinkActive="menu-active">
           <a href="javascript:void (0)" data-target="#blog">{{"common.news"|translate}}</a>
@@ -51,12 +41,12 @@
         </li>
         <li class="menu-has-children">
           <a href="javascript:void(0)">
-            <img src="assets/img/flags/{{currentLang.value}}.png"/> {{currentLang.text}}
+            <img src="assets/img/flags/{{currentLang.value}}.png" /> {{currentLang.text}}
           </a>
           <ul>
             <li *ngFor="let item of langList">
               <a href="javascript:void(0)" [attr.data-lang]="item.value" (click)="changeLang(item.value)">
-                <img src="assets/img/flags/{{item.value}}.png"/>
+                <img src="assets/img/flags/{{item.value}}.png" />
                 {{item.text}}
               </a>
             </li>
