--- a/site/src/app/partners/partners.component.html
+++ b/site/src/app/partners/partners.component.html
@@ -15,7 +15,7 @@
 
       <div class="col-md-6 col-md-4 col-lg-3" *ngFor="let item of items">
         <img [src]="baseUrl+item.image"  width="225" height="225"  alt="img">
-        <h4 [innerHTML]="item.title">
+        <h4 [innerHTML]="item.name">
         </h4>
       </div>
 
