fixed nav-bar colour

--- a/site/src/app/layout/header/header.component.html
+++ b/site/src/app/layout/header/header.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <nav id="nav-menu-container">
-      <ul class="nav-menu">
+      <ul class="nav-menu align-self-center">
         <li routerLinkActive="menu-active">
           <a href="javascript:void (0)" data-target="#pricing">{{"common.products"|translate}}</a>
         </li>
@@ -51,6 +51,11 @@
               </a>
             </li>
           </ul>
+        </li>
+        <li routerLinkActive="menu-active">
+          <a href="tel:781471100" class="btn btn-primary text-white">
+            <i class="fa fa-phone"></i> (78) 147-11-00;147-22-00
+          </a>
         </li>
       </ul>
     </nav>
