--- a/site/src/assets/css/style.scss
+++ b/site/src/assets/css/style.scss
@@ -135,12 +135,12 @@ span {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #fff;
+  background: #fafafa;
   position: fixed;
   left: 0;
   top: 0;
   right: 0;
-  height: 48px;
+  height: 54px;
   z-index: 3;
   transition: all 0.5s ease;
 }
@@ -152,7 +152,7 @@ span {
 #header #logo h1 {
   color: #505050;
   font-family: "Philosopher", sans-serif;
-  font-size: 26px;
+  font-size: 30px;
   font-weight: 500;
   letter-spacing: 1px;
   margin: 0;
@@ -330,8 +330,9 @@ span {
 
 /* Nav Meu Container */
 #nav-menu-container {
-  float: right;
+  position: absolute;
   margin: 0 0 0 0;
+  right: 20px;
 }
 
 @media (max-width: 1024px) {
@@ -360,6 +361,7 @@ span {
 
 .nav-menu > li {
   margin-left: 10px;
+  padding-top: 5px;
 }
 
 .nav-menu ul {
@@ -561,7 +563,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Get Started Section
 --------------------------------*/
-#get-started {
+#get-started  {
   display: inline-block;
   height: 100%;
   width: 100%;
@@ -607,6 +609,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* About Us Section
 --------------------------------*/
+
 #about-us img {
   max-width: 100%;
 }
@@ -702,6 +705,10 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Team Section
 --------------------------------*/
+#team {
+  background: #FAFAFA;
+}
+
 #team .team-block {
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
   height: 192px;
@@ -854,6 +861,10 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Pricing Table Section
 --------------------------------*/
+#pricing {
+  background: #FAFAFA;
+}
+
 #pricing .block-pricing {
   background: #fff;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 4px 0 rgba(0, 0, 0, 0.19);
@@ -918,6 +929,10 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Blog Section
 --------------------------------*/
+#blog{
+  background: #FAFAFA;
+}
+
 @media (max-width: 991px) {
   #blog .block-blog {
     margin-bottom: 30px;
@@ -977,7 +992,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 /* Contact Section
 --------------------------------*/
 #contact {
-  background: #fff;
+  background: #FAFAFA;
 }
 
 #contact .info {
